# ergot-playground

nrf52840/: Cargo.toml
nrf52840/src/: main.rs
pc-app/: Cargo.toml
pc-app/src/: main.rs
