[package]
name = "nrf52840"
version = "0.1.0"
edition = "2024"

[dependencies]
bbq2 = "0.4.2"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.7.0", features = ["nrf52840", "time-driver-rtc1", "time", "unstable-pac"] }
embassy-time = "0.5.0"
embedded-hal-async = "1.0.0"
ergot = { version = "0.10.0", features = ["embedded-io-async-v0_6"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
